Expand tamper UI; add scripting capability
